# cmusearch

./: .gitignore  README.md
data/: .gitignore  README.md  buildings.py  food.py  pyproject.toml  rooms.py  s3util.py
engine/: .gitignore  Cargo.toml  README.md  index.html  search-worker.js  sw.js
engine/benchmarking/: benchmark.py  benchmark_report.md  pyproject.toml
engine/pkg-sw/: engine.d.ts  engine.js  engine_bg.wasm  engine_bg.wasm.d.ts  package.json
engine/src/: build.rs  default_config.json  lib.rs  parse.rs  rank.rs  types.rs
engine/src/documents/: roomDocuments.json
scripts/: secrets-pull.sh  secrets-push.sh
