[package]
name = "engine"
version = "0.1.0"
edition = "2021"

[lib]
crate-type = ["cdylib", "rlib"]

[dependencies]
wasm-bindgen = "0.2"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
js-sys = "0.3"
web-sys = { version = "0.3", features = ["console"] }

# Optional dependencies for native builds (not WASM)
rayon = { version = "1.11.0", optional = true }
reqwest = { version = "0.12.26", features = ["blocking"], optional = true }

[features]
default = []
native = ["rayon", "reqwest"]

[profile.release]
opt-level = "s"
lto = true
